From ucommon 1.9.0 to 1.9.1
- bug in string::token parsing fixed.

From ucommon 1.8.2 to 1.9.0
- pipestream interface normalized for shell execution.
- new "shell" class for generic parsing and argument expansion.
- v4mapped() added to enable/disable ipv4 to ipv6 mapping support.
- fsys::isfile/isdir added.
- some rework of timer events to better support updating in arm & disarm.

From ucommon 1.8.1 to 1.8.2
- doxygen updates.
- fix related to libstdc++/ansi c++ library design defect.

From ucommon 1.8.0 to 1.8.1
- use entirely safe string operations everywhere.
- keyassoc keydata constructor changed to pass size of string buffer.
- basic optional GNU pth support completed.

From ucommon 1.7.2 to 1.8.0
- support for forced ipv4/ipv6 in init.  ipv6 unit testing.
- new family method for query default. 
- further refinement of socket api.
- ipv6 support for opensolaris and -lnsl.

From ucommon 1.7.1 to 1.7.2
- small fix in type mismatch in stream allocate methods.
- do not remap undefined error codes, as can break switch blocks.
- fix for mingw32 address conversion functions.

From ucommon 1.7.0 to 1.7.1
- extended errno mapping for sockets.

From ucommon 1.6.2 to 1.7.0
- updated abi for fsys, rebuilt to unify file handling and to use a common
  type and functions for files, directory access, and loader.
- simplified TimedEvent completion port handling and new static members.
- refactored socket api around supporting use of native socket_t.  Minimal
  api for abstract socket class used for protocol building.
- refactored containers to use references in assignment to avoid stack frame   
  constructions.
- added stream classes for fsys (threaded i/o) and piping.

From ucommon 1.6.1 to 1.6.2
- improved support for using Socket::address as referenced type.  New set &
  add methods.

From ucommon 1.6.0 to 1.6.1
- fix for loader.
- simplified fsys r/w calls.
- fsys.h documented.

From ucommon 1.5.0 to 1.6.0
- some small cleanups for opensolaris builds.